Fix font weight since they appear too thin for readability.

--- a/app/assets/stylesheets/_partials/_base/_global.scss
+++ b/app/assets/stylesheets/_partials/_base/_global.scss
@@ -45,6 +45,7 @@
         color: white;
         display: inline-block;
         font-family: $baseFontFamily;
+        font-weight: 400;
         margin: 5px 2px;
         padding: 5px 10px;
         text-decoration: none;
