--- a/app/assets/stylesheets/_partials/_components/_forms.scss
+++ b/app/assets/stylesheets/_partials/_components/_forms.scss
@@ -6,6 +6,7 @@
 // --------------------------------------------------
 label {
     font-family: $baseFontFamily;
+    font-weight: 400;
 }
 
 // Inputs
